gts-macros/tests/compile_fail/instance_missing_schema_id.stderr
error: unexpected end of input, gts_well_known_instance: Missing required attribute: schema_id
 --> tests/compile_fail/instance_missing_schema_id.rs:5:1
  |
5 | / #[gts_well_known_instance(
6 | |     dir_path = "instances",
7 | |     instance_segment = "x.commerce._.orders.v1.0"
8 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `gts_well_known_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
